adiciona modais iniciais (sem css) para lançamentos e proventos

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -138,6 +138,7 @@ body.modal-open {
 }
 
 .secondary-btn {
+  font-size: 1rem;
   background-color: var(--secondary-btn);
   color: var(--foreground);
   font-weight: bold;
