--- a/app/src/css/Wallets.css
+++ b/app/src/css/Wallets.css
@@ -114,6 +114,12 @@
   border-radius: 5px;
 }
 
+.edit-wallets-btn {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+
 .wallets-dividing-section {
   width: 100%;
   height: 1.5px;
@@ -426,4 +432,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding: 1rem 2rem;
   border-radius: var(--custom-border-radius);
   font-size: 1rem;
+}
+
+.transaction-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.transaction-item {
+  background: #f4f4f4;
+  padding: 1rem;
+  border-radius: 10px;
 }
