--- a/app/src/css/Wallets.css
+++ b/app/src/css/Wallets.css
@@ -13,8 +13,7 @@
   gap: 1vw;
   padding: 2rem 0px;
   width: 100%;
-  height: 12vh;
-  max-height: 175px;
+  min-height: 12vh;
 }
 
 .wallet-card {
@@ -24,6 +23,24 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   height: 100%;
   display: flex;
+  height: 12vh;
+  max-height: 175px;
+  position: relative;
+}
+
+.delete-wallet-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background-color: transparent;
+  border: none;
+  color: var(--red);
+  width: 1rem;
+  height: 1rem;
+  cursor: pointer;
 }
 
 .wallet-card-active {
@@ -61,6 +78,7 @@
   justify-content: center;
   gap: 5px;
   color: var(--foreground);
+  padding-right: 20px;
 }
 
 .wallet-card-right > h3 {
@@ -82,6 +100,8 @@
   justify-content: center;
   gap: 10px;
   cursor: pointer;
+  height: 12vh;
+  max-height: 175px;
 }
 
 .add-wallet-icon-around {
@@ -213,7 +233,7 @@
 
 .custom-date-input {
   width: 100%;
-  background-color: transparent;
+  background-color: var(--background);
   border: 1px solid var(--card-border);
   border-radius: 12px;
   color: var(--faded);
@@ -434,6 +454,38 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-size: 1rem;
 }
 
+.transaction-list-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.transaction-list-box {
+  height: 80vh;
+  width: 90vw;
+  background-color: var(--background);
+  padding: 2rem 1rem;
+  border: 1px solid var(--card-border);
+  border-radius: var(--custom-border-radius);
+  box-shadow: 0 0 15px var(--primary-blue-glow);
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.transaction-list-title {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.transaction-list-title > h3 {
+  font-size: 1.5rem;
+}
+
 .transaction-list {
   display: flex;
   flex-direction: column;
@@ -442,7 +494,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .transaction-item {
-  background: #f4f4f4;
   padding: 1rem;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.transaction-list-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  margin-top: 1rem;
+  overflow-y: scroll;
 }
