--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -270,88 +270,62 @@
   display: block;
 }
 
-.home-news-section {
+.home-highlight-section {
   margin-top: 15vh;
-  display: flex;
-  flex-direction: column;
   width: 100%;
 }
 
-.home-news-animated-section {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 35vh;
-  gap: 5vh;
-}
-
-.home-news-grid {
-  display: flex;
-  width: 100%;
-  height: 100%;
+.home-highlight-cards-container {
+  height: 20vh;
   gap: 1vw;
-}
-
-.home-news-card {
-  background-color: var(--card-bg);
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  flex: 1;
-  border-radius: var(--custom-border-radius);
-  border: 1px solid var(--card-border);
-  position: relative;
-  cursor: pointer;
-}
-
-.home-news-card {
-  display: flex;
-  padding-bottom: 2vh;
-}
-
-.news-card-img {
-  width: 100%;
-  height: 45%;
-  background-color: var(--primary-blue);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
-
-.news-card-text {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
-  flex: 1;
-  height: 55%;
-  gap: 7px;
-  margin-right: 1vw;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-.home-news-title,
-.home-news-source {
-  margin-left: 1vw;
-}
-
-.home-news-title {
-  height: 70%;
   display: flex;
   align-items: center;
-  justify-content: start;
+  margin-top: 3vh;
 }
 
-.home-news-source {
+.home-highlight-card {
+  display: flex;
+  flex: 1;
+  background-color: var(--card-bg);
+  border: 1px solid var(--card-border);
+  border-radius: var(--custom-border-radius);
+  padding: 0px 10px;
+  height: 20vh;
+  flex-direction: column;
+  position: relative;
+}
+
+.home-highlight-card-top,
+.home-highlight-card-bottom {
+  display: flex;
+  width: 100%;
+  height: 50%;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.home-highlight-card-bottom {
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+}
+
+.home-highlight-card-name {
+  font-size: 1.25rem;
+}
+
+.home-highlight-card-price {
+  font-size: 1.1rem;
   color: var(--faded);
+  display: flex;
+  gap: 10px;
 }
 
-.home-news-card:hover {
-  box-shadow: 0 0 15px rgba(0, 102, 255, 0.5);
-  transform: translateY(-3px);
-  border: 1px solid var(--primary-blue);
+.home-highlight-variation-around {
+  padding: 3px 6px;
+  border-radius: var(--custom-border-radius);
+  font-size: 0.9rem;
 }
-
 .home-cta {
   margin-top: 15vh;
   display: flex;
